--- a/implantació-de-entorn-git.html
+++ b/implantació-de-entorn-git.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-16" />
+<meta name="date" content="2022-04-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -166,15 +166,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació de entorn Git<span></span></a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#implantació-del-sistema-col.laboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Implantació del sistema col.laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
+<li class="chapter" data-level="3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Implantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
 <li class="chapter" data-level="3.2" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#beneficis-de-la-seva-implantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seva implantació<span></span></a></li>
 <li class="chapter" data-level="3.3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#mode-de-funcionament"><i class="fa fa-check"></i><b>3.3</b> Mode de funcionament<span></span></a>
 <ul>
 <li class="chapter" data-level="3.3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#breu-tutorial-per-al-funcionament"><i class="fa fa-check"></i><b>3.3.1</b> Breu tutorial per al funcionament<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="3.4" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#instal.lació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal.lació d’un repositori en el centre<span></span></a></li>
+<li class="chapter" data-level="3.4" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal·lació d’un repositori en el centre<span></span></a></li>
 <li class="chapter" data-level="3.5" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
-<li class="chapter" data-level="3.6" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització de escritura col·laborativa<span></span></a></li>
+<li class="chapter" data-level="3.6" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#explorar-wikimedia-per-a-la-realització-de-escriptura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització de escriptura col·laborativa<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a Hugo<span></span></a>
 <ul>
@@ -184,7 +184,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.2.1" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#conversió-dels-posts-de-wordpress-a-md"><i class="fa fa-check"></i><b>4.2.1</b> Conversió dels posts de WordPress a md<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4.3" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#organització-del-diferents-apartats-de-les-fulles"><i class="fa fa-check"></i><b>4.3</b> Organització del diferents apartats de les fulles<span></span></a></li>
-<li class="chapter" data-level="4.4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#alternativa-merege-wordpress"><i class="fa fa-check"></i><b>4.4</b> Alternativa, merege wordpress<span></span></a></li>
+<li class="chapter" data-level="4.4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#alternativa-merege-wordpress"><i class="fa fa-check"></i><b>4.4</b> Alternativa, merege WordPress<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html"><i class="fa fa-check"></i><b>5</b> Implantació de projectes exelerarning<span></span></a>
 <ul>
@@ -193,7 +193,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="5.2.1" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#llocs-on-podem-penjar-el-material-educatiu"><i class="fa fa-check"></i><b>5.2.1</b> Llocs on podem penjar el material educatiu<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma moodle<span></span></a></li>
+<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma Moodle<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html"><i class="fa fa-check"></i><b>6</b> Desenvolupament Appweb<span></span></a>
 <ul>
@@ -209,7 +209,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-de-pugin-de-venda-de-entrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació de pugin de venda de entrades i tema per a la fulla web<span></span></a></li>
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="8" data-path="configurracio-del-servidor.html"><a href="configurracio-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configurracio del servidor<span></span></a></li>
+<li class="chapter" data-level="8" data-path="configuració-del-servidor.html"><a href="configuració-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configuració del servidor<span></span></a>
+<ul>
+<li class="chapter" data-level="8.1" data-path="configuració-del-servidor.html"><a href="configuració-del-servidor.html#altres-coses-a-fer"><i class="fa fa-check"></i><b>8.1</b> Altres coses a fer<span></span></a></li>
+</ul></li>
 <li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> Notes<span></span></a>
 <ul>
 <li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
@@ -233,9 +236,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="implantació-de-entorn-git" class="section level1 hasAnchor" number="3">
 <h1><span class="header-section-number">Projecte 3</span> Implantació de entorn Git<a href="implantació-de-entorn-git.html#implantació-de-entorn-git" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>Explorar la forma d’integrar el concepte git en les arts escèniques. Explorar els avantatges del seguiment de versions, i el procés col.laboratiu per per a la elaboració de publicacions o la creació d’obres de teatre,</p>
-<div id="implantació-del-sistema-col.laboratiu-en-el-desenvolupament-dobres-de-teatre." class="section level2 hasAnchor" number="3.1">
-<h2><span class="header-section-number">3.1</span> Implantació del sistema col.laboratiu en el desenvolupament d’obres de teatre.<a href="implantació-de-entorn-git.html#implantació-del-sistema-col.laboratiu-en-el-desenvolupament-dobres-de-teatre." class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>Explorar la forma d’integrar el concepte git en les arts escèniques. Explorar els avantatges del seguiment de versions, i el procés col·laboratiu per per a la elaboració de publicacions o la creació d’obres de teatre,</p>
+<div id="implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre." class="section level2 hasAnchor" number="3.1">
+<h2><span class="header-section-number">3.1</span> Implantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<a href="implantació-de-entorn-git.html#implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre." class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>Es pot realitzar mitjan la creació d’un compte en una de les plataformes git que hi ha en internet,</li>
 <li>Configurant un servidor git en el propi centre de treball
@@ -260,12 +263,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h3><span class="header-section-number">3.3.1</span> Breu tutorial per al funcionament<a href="implantació-de-entorn-git.html#breu-tutorial-per-al-funcionament" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 </div>
 </div>
-<div id="instal.lació-dun-repositori-en-el-centre" class="section level2 hasAnchor" number="3.4">
-<h2><span class="header-section-number">3.4</span> Instal.lació d’un repositori en el centre<a href="implantació-de-entorn-git.html#instal.lació-dun-repositori-en-el-centre" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>Procés d’instal.lacio d’un repositori de git</p>
+<div id="installació-dun-repositori-en-el-centre" class="section level2 hasAnchor" number="3.4">
+<h2><span class="header-section-number">3.4</span> Instal·lació d’un repositori en el centre<a href="implantació-de-entorn-git.html#installació-dun-repositori-en-el-centre" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>Procés d’instal·lació d’un repositori de git</p>
 <ul>
-<li><p>Git i Apache <code>buscar la fulla on ho esplicaa</code></p></li>
-<li><p>Instal.lacio de <a href="https://docs.gitea.io/en-us/">gitea</a> , o be directament, o per una imatge docker</p></li>
+<li><p>Git i Apache <code>buscar la fulla on ho explica</code></p></li>
+<li><p>Instal·lació de <a href="https://docs.gitea.io/en-us/">gitea</a> , o be directament, o per una imatge docker</p></li>
 <li><p>Servir el <a href="https://www.permikkelsen.dk/how-to-host-your-git-repository-on-onedrive.html">git</a> en un espai onedrive, pareix que es per consola, mirar algun client de git desktop que facilita les coses.</p></li>
 </ul>
 </div>
@@ -273,9 +276,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h2><span class="header-section-number">3.5</span> Possible implantació en el repositori en internet<a href="implantació-de-entorn-git.html#possible-implantació-en-el-repositori-en-internet" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>El mes fàcil seria el traure un comptem en una de les plataformes que hi ha en internet, el problema es el recel que tinga l’empresa per el tema de privacitat. Estes plataformes tenen l’opció de crear repositoris privats, on soles es pot connectar al que convideu.</p>
 </div>
-<div id="explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa" class="section level2 hasAnchor" number="3.6">
-<h2><span class="header-section-number">3.6</span> Explorar wikimedia per a la realització de escritura col·laborativa<a href="implantació-de-entorn-git.html#explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p>L’escriptura col·laborativa mitjançant ferramentes de xarxa, com la wikipedia, on es possible discutir els convits proposat, obrir discussions sobre el text analitzat. Es pot explorar el concepte de <a href="https://es.wikipedia.org/wiki/Narrativa_hipertextual">Narrativa hipertextual</a> fent servir aquesta ferramenta.</p>
+<div id="explorar-wikimedia-per-a-la-realització-de-escriptura-collaborativa" class="section level2 hasAnchor" number="3.6">
+<h2><span class="header-section-number">3.6</span> Explorar wikimedia per a la realització de escriptura col·laborativa<a href="implantació-de-entorn-git.html#explorar-wikimedia-per-a-la-realització-de-escriptura-collaborativa" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p>L’escriptura col·laborativa mitjançant ferramentes de xarxa, com la Wikipedia, on es possible discutir els convits proposat, obrir discussions sobre el text analitzat. Es pot explorar el concepte de <a href="https://es.wikipedia.org/wiki/Narrativa_hipertextual">Narrativa hipertextual</a> fent servir aquesta ferramenta.</p>
 
 </div>
 </div>
