--- a/desenvolupament-appweb.html
+++ b/desenvolupament-appweb.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Ramiro Palau" />
 
 
-<meta name="date" content="2022-04-16" />
+<meta name="date" content="2022-04-20" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -151,30 +151,30 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.5.1" data-path="streaming.html"><a href="streaming.html#servidor"><i class="fa fa-check"></i><b>1.5.1</b> Servidor<span></span></a></li>
 <li class="chapter" data-level="1.5.2" data-path="streaming.html"><a href="streaming.html#servidor-de-disc"><i class="fa fa-check"></i><b>1.5.2</b> Servidor de disc<span></span></a></li>
 <li class="chapter" data-level="1.5.3" data-path="streaming.html"><a href="streaming.html#càmeres-ip"><i class="fa fa-check"></i><b>1.5.3</b> Càmeres ip<span></span></a></li>
-<li class="chapter" data-level="1.5.4" data-path="streaming.html"><a href="streaming.html#el-conter-del-streaming"><i class="fa fa-check"></i><b>1.5.4</b> El conter del streaming<span></span></a></li>
+<li class="chapter" data-level="1.5.4" data-path="streaming.html"><a href="streaming.html#el-compte-del-streaming"><i class="fa fa-check"></i><b>1.5.4</b> El compte del streaming<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="1.6" data-path="streaming.html"><a href="streaming.html#muntatge"><i class="fa fa-check"></i><b>1.6</b> Muntatge<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html"><i class="fa fa-check"></i><b>2</b> Instal·lació de wifi per al pati de butaques<span></span></a>
 <ul>
-<li class="chapter" data-level="2.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#requeriments-per-a-la-seva-implantació"><i class="fa fa-check"></i><b>2.1</b> Requeriments per a la seva implantació<span></span></a>
+<li class="chapter" data-level="2.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#requeriments-per-a-la-seua-implantació"><i class="fa fa-check"></i><b>2.1</b> Requeriments per a la seua implantació<span></span></a>
 <ul>
-<li class="chapter" data-level="2.1.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#potencia-de-la-connexió-de-internet-per-donar-servei"><i class="fa fa-check"></i><b>2.1.1</b> Potencia de la connexió de internet per donar servei<span></span></a></li>
+<li class="chapter" data-level="2.1.1" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#potència-de-la-connexió-dinternet-per-donar-servei"><i class="fa fa-check"></i><b>2.1.1</b> Potència de la connexió d’internet per donar servei<span></span></a></li>
 <li class="chapter" data-level="2.1.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#localització-dels-dispositius-de-retransmissió"><i class="fa fa-check"></i><b>2.1.2</b> localització dels dispositius de retransmissió<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="2.2" data-path="installació-de-wifi-per-al-pati-de-butaques.html"><a href="installació-de-wifi-per-al-pati-de-butaques.html#muntatge-1"><i class="fa fa-check"></i><b>2.2</b> Muntatge<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació de entorn Git<span></span></a>
+<li class="chapter" data-level="3" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html"><i class="fa fa-check"></i><b>3</b> Implantació d’entorn Git<span></span></a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#implantació-del-sistema-col.laboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Implantació del sistema col.laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
-<li class="chapter" data-level="3.2" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#beneficis-de-la-seva-implantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seva implantació<span></span></a></li>
-<li class="chapter" data-level="3.3" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#mode-de-funcionament"><i class="fa fa-check"></i><b>3.3</b> Mode de funcionament<span></span></a>
+<li class="chapter" data-level="3.1" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#implantació-del-sistema-collaboratiu-en-el-desenvolupament-dobres-de-teatre."><i class="fa fa-check"></i><b>3.1</b> Implantació del sistema col·laboratiu en el desenvolupament d’obres de teatre.<span></span></a></li>
+<li class="chapter" data-level="3.2" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#beneficis-de-la-seua-implantació"><i class="fa fa-check"></i><b>3.2</b> Beneficis de la seua implantació<span></span></a></li>
+<li class="chapter" data-level="3.3" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#mode-de-funcionament"><i class="fa fa-check"></i><b>3.3</b> Mode de funcionament<span></span></a>
 <ul>
-<li class="chapter" data-level="3.3.1" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#breu-tutorial-per-al-funcionament"><i class="fa fa-check"></i><b>3.3.1</b> Breu tutorial per al funcionament<span></span></a></li>
+<li class="chapter" data-level="3.3.1" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#breu-tutorial-per-al-funcionament"><i class="fa fa-check"></i><b>3.3.1</b> Breu tutorial per al funcionament<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="3.4" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#instal.lació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal.lació d’un repositori en el centre<span></span></a></li>
-<li class="chapter" data-level="3.5" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
-<li class="chapter" data-level="3.6" data-path="implantació-de-entorn-git.html"><a href="implantació-de-entorn-git.html#explorar-wikimedia-per-a-la-realització-de-escritura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització de escritura col·laborativa<span></span></a></li>
+<li class="chapter" data-level="3.4" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#installació-dun-repositori-en-el-centre"><i class="fa fa-check"></i><b>3.4</b> Instal·lació d’un repositori en el centre<span></span></a></li>
+<li class="chapter" data-level="3.5" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#possible-implantació-en-el-repositori-en-internet"><i class="fa fa-check"></i><b>3.5</b> Possible implantació en el repositori en internet<span></span></a></li>
+<li class="chapter" data-level="3.6" data-path="implantació-dentorn-git.html"><a href="implantació-dentorn-git.html#explorar-wikimedia-per-a-la-realització-descriptura-collaborativa"><i class="fa fa-check"></i><b>3.6</b> Explorar wikimedia per a la realització d’escriptura col·laborativa<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html"><i class="fa fa-check"></i><b>4</b> Migració de les fulles web a Hugo<span></span></a>
 <ul>
@@ -183,8 +183,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="4.2.1" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#conversió-dels-posts-de-wordpress-a-md"><i class="fa fa-check"></i><b>4.2.1</b> Conversió dels posts de WordPress a md<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="4.3" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#organització-del-diferents-apartats-de-les-fulles"><i class="fa fa-check"></i><b>4.3</b> Organització del diferents apartats de les fulles<span></span></a></li>
-<li class="chapter" data-level="4.4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#alternativa-merege-wordpress"><i class="fa fa-check"></i><b>4.4</b> Alternativa, merege wordpress<span></span></a></li>
+<li class="chapter" data-level="4.3" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#organització-dels-diferents-apartats-de-les-fulles"><i class="fa fa-check"></i><b>4.3</b> Organització dels diferents apartats de les fulles<span></span></a></li>
+<li class="chapter" data-level="4.4" data-path="migració-de-les-fulles-web-a-hugo.html"><a href="migració-de-les-fulles-web-a-hugo.html#alternativa-merege-wordpress"><i class="fa fa-check"></i><b>4.4</b> Alternativa, merege WordPress<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html"><i class="fa fa-check"></i><b>5</b> Implantació de projectes exelerarning<span></span></a>
 <ul>
@@ -193,7 +193,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="5.2.1" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#llocs-on-podem-penjar-el-material-educatiu"><i class="fa fa-check"></i><b>5.2.1</b> Llocs on podem penjar el material educatiu<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma moodle<span></span></a></li>
+<li class="chapter" data-level="5.3" data-path="implantació-de-projectes-exelerarning.html"><a href="implantació-de-projectes-exelerarning.html#possible-implantació-duna-plataforma-moodle"><i class="fa fa-check"></i><b>5.3</b> Possible implantació d’una plataforma Moodle<span></span></a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="desenvolupament-appweb.html"><a href="desenvolupament-appweb.html"><i class="fa fa-check"></i><b>6</b> Desenvolupament Appweb<span></span></a>
 <ul>
@@ -205,11 +205,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="7" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html"><i class="fa fa-check"></i><b>7</b> Remodelat de la fulla web de <em>Espacio Inestable</em><span></span></a>
 <ul>
-<li class="chapter" data-level="7.1" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#reformulació-de-les-estratègies-de-venda-de-entrades"><i class="fa fa-check"></i><b>7.1</b> Reformulació de les estratègies de venda de entrades<span></span></a></li>
-<li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-de-pugin-de-venda-de-entrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació de pugin de venda de entrades i tema per a la fulla web<span></span></a></li>
+<li class="chapter" data-level="7.1" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#reformulació-de-les-estratègies-de-venda-dentrades"><i class="fa fa-check"></i><b>7.1</b> Reformulació de les estratègies de venda d’entrades<span></span></a></li>
+<li class="chapter" data-level="7.2" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#installació-de-pugin-de-venda-dentrades-i-tema-per-a-la-fulla-web"><i class="fa fa-check"></i><b>7.2</b> Instal·lació de pugin de venda d’entrades i tema per a la fulla web<span></span></a></li>
 <li class="chapter" data-level="7.3" data-path="remodelat-de-la-fulla-web-de-espacio-inestable.html"><a href="remodelat-de-la-fulla-web-de-espacio-inestable.html#tasques-a-fer"><i class="fa fa-check"></i><b>7.3</b> Tasques a fer<span></span></a></li>
 </ul></li>
-<li class="chapter" data-level="8" data-path="configurracio-del-servidor.html"><a href="configurracio-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configurracio del servidor<span></span></a></li>
+<li class="chapter" data-level="8" data-path="configuració-del-servidor.html"><a href="configuració-del-servidor.html"><i class="fa fa-check"></i><b>8</b> Configuració del servidor<span></span></a>
+<ul>
+<li class="chapter" data-level="8.1" data-path="configuració-del-servidor.html"><a href="configuració-del-servidor.html#altres-coses-a-fer"><i class="fa fa-check"></i><b>8.1</b> Altres coses a fer<span></span></a></li>
+</ul></li>
 <li class="chapter" data-level="9" data-path="notes.html"><a href="notes.html"><i class="fa fa-check"></i><b>9</b> Notes<span></span></a>
 <ul>
 <li class="chapter" data-level="9.1" data-path="notes.html"><a href="notes.html#recordatoris"><i class="fa fa-check"></i><b>9.1</b> Recordatoris<span></span></a></li>
@@ -233,24 +236,24 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="desenvolupament-appweb" class="section level1 hasAnchor" number="6">
 <h1><span class="header-section-number">Projecte 6</span> Desenvolupament Appweb<a href="desenvolupament-appweb.html#desenvolupament-appweb" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p><em>L’empresa vol realitzar informes per a la seva comptabilitat i la demanda de subvencions, on es reflectiran el numero d’obres, espectadors, gasto, i fer estadístiques de la assistència de public i comparar en Google analític</em>..</p>
+<p><em>L’empresa vol personaltzar informes per a la seua comptabilitat i la demanda de subvencions, on es reflectiran el nombre d’obres, espectadors, gasto, i fer estadístiques de l’assistència de públic i comparar en Google analític</em>.</p>
 <div id="desenvolupament-duna-app-de-gestió-dinformes-de-la-sala." class="section level2 hasAnchor" number="6.1">
 <h2><span class="header-section-number">6.1</span> Desenvolupament d’una app de gestió d’informes de la sala.<a href="desenvolupament-appweb.html#desenvolupament-duna-app-de-gestió-dinformes-de-la-sala." class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>Es proposa la realització d’una appweb que realitze aquestes tasque.</em></p>
-<p>En principi, seria mitjançant una base de dades, on introduir els valors que recopile la empesa, i un entorn web on es pugen fer consultes i redactar informes sobre les mateixes.</p>
+<p>En principi, seria mitjançant una base de dades, on introduir els valors que recopile l’empesa, i un entorn web on es puguen fer consultes i redactar informes.</p>
 <blockquote>
-<p>Pendent de resoldre, la conveniència o no de la utilització de una base de dades, una SQLite o un fitxer json, ja que el numero de dades no es massa elevat.<br />
-Investigar com es fan estes coses, ja que jo soc de xarxes, no de programació.</p>
+<p>Pendent de resoldre, la conveniència o no de la utilització d’una base de dades, una SQLite o un fitxer json, ja que el nombre de dades no es massa elevat.<br />
+Investigar com es fan aquestes coses, ja que jo soc de xarxes, no de programació.</p>
 </blockquote>
-<p>La app es colgaria en el servidor de l’empresa, per a que es puguen fer consultes des de alli.
-El que implica la configuració de un servidor en la mateixa sala, on de pas posarem un servidor de dns, un de fulles web si es vol realitzar interaccions amb el public, optatiu un de correu, i es podria imantar també un servidor git, per fer les copies de seguretat i seguiment de versions, dels projectes com la revista que publiquen o obres de teatre, en el cas de que les vullguen crear de forma col.lavorativa.</p>
-<p>Després de provar varies alternatives, com <a href="https://about.gitlab.com/">gitlab</a> , <a href="https://gogs.io/">Gogs</a>, la millor alternativa pareix ser <a href="https://gitea.io/en-us/">Gitea</a>, es molt lleuger, es pot instal.lar amb una base de dades SQLite, i el entorn web que proporciona es molt paregut al de github, i les exigencies de la empresa, no son les de un entorn de programació.</p>
-<p>La millor opció per aquest cas es traure un conter de github de la empesa, on es guarden els projectes.</p>
+<p>L’app es colgaria en el servidor de l’empresa, perquè es puguen fer consultes des d’allí.
+El que implica la configuració d’un servidor en la mateixa sala, on de pas posarem un servidor de dns, un de fulles web si es vol realitzar interaccions amb el públic, optatiu un de correu, i es podria imantar també un servidor git, per fer les còpies de seguretat i seguiment de versions, dels projectes com la revista que publiquen o obres de teatre, en el cas que les vulguen crear de forma col·laborativa.</p>
+<p>Després de provar diverses alternatives, com <a href="https://about.gitlab.com/">gitlab</a> , <a href="https://gogs.io/">Gogs</a>, la millor alternativa pareix ser <a href="https://gitea.io/en-us/">Gitea</a>, és molt lleuger, es pot instal·lar amb una base de dades SQLite, i l’entorn web que proporciona es molt paregut al de github, i les exigències de l’empresa, no són les d’un entorn de programació.</p>
+<p>La millor opció per aquest cas és traure un compte de github de l’empesa, on es guarden els projectes.</p>
 <div id="alternatives" class="section level3 hasAnchor" number="6.1.1">
 <h3><span class="header-section-number">6.1.1</span> Alternatives<a href="desenvolupament-appweb.html#alternatives" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ul>
 <li>El projecte es pot realitzar en node.js, express i vue.js</li>
-<li><a href="https://www.r-project.org/">R</a> i <a href="https://shiny.rstudio.com/">shiny</a>, que pareix mes fàcil, el que implica l’instal.lacio de R en el servidor, per a que ens servisca la aplicació.</li>
+<li><a href="https://www.r-project.org/">R</a> i <a href="https://shiny.rstudio.com/">shiny</a>, que pareix més fàcil, el que implica l’instal·lacio de R en el servidor, perquè ens servisca l’aplicació.</li>
 </ul>
 </div>
 </div>
